Fix alignment of dataset filters

--- a/ckanext/nextgeoss/public/nextgeoss.css
+++ b/ckanext/nextgeoss/public/nextgeoss.css
@@ -336,7 +336,6 @@ h4.title a {
 
 .datasets-search-form-container__controls .search-input {
   width: 400px;
-  margin-left: 20px;
 }
 
 .datasets-search-form-container__controls .search {
@@ -961,10 +960,6 @@ section.dataset-map-section {
 .module-content:first-child {
   padding-top: 0px;
   padding-right: 0px !important;
-}
-
-#dataset-search-form {
- margin-left: -20px !important;
 }
 
 article.module {
